--- a/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/Users/edit.html.twig
@@ -11,6 +11,8 @@
 					</div> 
 					<form class="user-editor m-t">
   					
+  				  <p class="has-errors upload-errors"></p>
+  					
   				  <div class="col-xs-4 no-padder-l avatar-wrapper">
     				  <input type="file" name="avatarFile" accept="image/*">
     				  <img src="<%= converted.avatar %>" class="avatar">
