--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
@@ -20,97 +20,101 @@
 
 	{% block content %}
 
-    <!-- .vbox -->
-    <section id="redirection" class="vbox">
+  <!-- .vbox -->
+  <section id="redirection" class="vbox">
 
-        <header class="blue-header dker header b-b">
-          <p>Redirections</p>
-          <a id="redirection-new" class="btn btn-sm btn-primary pull-right">
-            <i class="icon-plus pull-left"></i>
-            Ajouter une redirection
-          </a>
-        </header>
+      <header class="blue-header dker header b-b">
+        <p>Redirections</p>
+        <a id="redirection-new" class="btn btn-sm btn-primary pull-right">
+          <i class="icon-plus pull-left"></i>
+          Ajouter une redirection
+        </a>
+      </header>
 
-        <section class="scrollable">
-          <section class="hbox stretch">
-            <aside class="bg-white">
-              <section class="vbox">
-                <section class="scrollable">
+      <section class="scrollable">
+        <section class="hbox stretch">
+          <aside class="bg-white">
+            <section class="vbox">
+              <section class="scrollable">
 
-                  <header class="wrapper-sm clearfix b-b">
-                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8 redirection-view">
-    	                <span>Titre</span>
-    	              </div>
+                <header class="wrapper-sm clearfix b-b">
+                  <div class="col-lg-9 col-md-9 col-sm-8 col-xs-8 redirection-view">
+  	                <span>Titre</span>
+  	              </div>
 
-                    <div class="col-lg-1 col-md-1 col-sm-2 col-xs-2 text-center">
-    	                <span>Fréquence</span>
-    	              </div>
+                  <div class="col-lg-1 col-md-1 col-sm-2 col-xs-2 text-center">
+  	                <span>Fréquence</span>
+  	              </div>
 
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 redirection-action">
-                      <span>Défaut</span>
-                    </div>
-                  </header>
+                  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 redirection-action">
+                    <span>Défaut</span>
+                  </div>
+                </header>
 
-        		      <ul id="redirections-list" class="list-group no-borders no-radius m-b-none list-group-alt list-group-lg">
-    	            <!-- Affichage de la liste des redirections -->
-    	            </ul>
+      		      <ul id="redirections-list" class="list-group no-borders no-radius m-b-none list-group-alt list-group-lg">
+  	            <!-- Affichage de la liste des redirections -->
+  	            </ul>
 
-                </section>
               </section>
-            </aside>
-            <aside id="redirection-edit" class="aside-redirection bg-light lter b-l hide">
-            <!-- Affichage du panneau de modification-->
-            </aside>
-          </section>
+            </section>
+          </aside>
+          <aside id="redirection-edit" class="aside-redirection bg-light lter b-l hide">
+          <!-- Affichage du panneau de modification-->
+          </aside>
         </section>
-      <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
-    </section>
-    <!-- /.vbox -->
+      </section>
+    <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen" data-target="#nav"></a>
+  </section>
+  <!-- /.vbox -->
 
 	{% endblock %}
 
 
-	{% block templates %}
-		<!-- L'appel des différents scripts de vue -->
- 		<script type="text/template" id="redirectionsList">
-            {% include 'LilyKnowledgeBundle:Redirections:redirections_list.html.twig' %}
-        </script>
-        <script type="text/template" id="redirectionEdit">
-            {% include 'LilyKnowledgeBundle:Redirections:redirection_edit.html.twig' %}
-        </script>
-    {% endblock %}
+  {% block templates %}
+  
+	<!-- L'appel des différents scripts de vue -->
+  <script type="text/template" id="listTpl">
+    {% include 'LilyKnowledgeBundle:Redirections:list.html.twig' %}
+  </script>
+  <script type="text/template" id="editTpl">
+    {% include 'LilyKnowledgeBundle:Redirections:edit.html.twig' %}
+  </script>
+  
+  {% endblock %}
 
-    {% block modal %}
-    <!-- Modal -->
-	<div class="modal fade" id="default-redirection-delete" tabindex="-1" role="dialog" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title"><i class="icon-bell-alt"></i>Attention</h4>
-	      </div>
-	      <div class="modal-body">
-	        Vous ne pouvez pas supprimer une redirection par défaut. Vous devez d'abord choisir une nouvelle redirection par défaut avant de pouvoir supprimer celle-ci.
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	{% endblock %}
+  {% block modal %}
+  
+  <!-- Modal -->
+  <div class="modal fade" id="default-redirection-delete" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title"><i class="icon-bell-alt"></i>Attention</h4>
+        </div>
+        <div class="modal-body">
+          Vous ne pouvez pas supprimer une redirection par défaut. Vous devez d'abord choisir une nouvelle redirection par défaut avant de pouvoir supprimer celle-ci.
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  {% endblock %}
 
 	{% block bootstrap %}
-	    {% autoescape false %}
-	    <script type="text/javascript">
-	        var config = {};
-          config.root = '{{ path('lily_redirections') }}';
+    {% autoescape false %}
+      <script type="text/javascript">
+        var config = {};
+        config.root = '{{ app.request.getBaseURL() }}/lily/api/redirections';
 	    </script>
-	    {% endautoescape %}
+    {% endautoescape %}
 	{% endblock %}
 
 </section>
 
-  <script
-    src="{{ asset('js/bower_components/requirejs/require.js')}}"
-    data-main="{{ asset('js/backoffice/redirection/main.js')}}">
-  </script>
+<script
+  src="{{ asset('js/bower_components/requirejs/require.js')}}"
+  data-main="{{ asset('js/backoffice/redirection/main.js')}}">
+</script>
 
 {% endblock %}
