--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
@@ -85,7 +85,7 @@
       {% include 'LilyKnowledgeBundle:Redirections:edit.html.twig' %}
     </script>
     <script type="text/template" id="modalTpl">
-      {% include 'LilyBackofficeBundle:Utils:modalAlert.html.twig' %}
+      {% include 'LilyBackOfficeBundle:Utils:modalAlert.html.twig' %}
     </script>
   {% endblock %}
 
