--- a/web/css/backoffice/redirection.css
+++ b/web/css/backoffice/redirection.css
@@ -24,7 +24,7 @@ REDIRECTION
 }
 @media (max-width: 767px) {
   .redirection-action,
-  .redirection-delete {
+  .delete-action {
     display: none;
   }
 }
