--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/list.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/list.html.twig
@@ -1,4 +1,4 @@
-<div class="clear row redirection-view">
+<div class="clear row hover">
 	<div class="col-sm-7 col-xs-9">
         <a href="#"><span><%=title %></span></a>
 	</div>
@@ -9,6 +9,6 @@
 	  <a href="#"><i class="icon-sign-blank"></i></a>
 	</div>
   <div class="col-xs-1 text-center delete-action">
-    <a href="#"><i class="icon-remove m-l-xs"></i></a>
+    <a href="#"><i class="icon-remove hover-action m-l-xs"></i></a>
   </div>
 </div>
