--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/content_edit.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/content_edit.html.twig
@@ -3,10 +3,16 @@
       <div class="wrapper">
         <div class="clearfix m-b">
           <div class="clear">
-            <div class="h5 m-t-xs m-b-xs">Contenu</div>
-            <small class="text-muted">Nous vous conseillons de limiter votre réponse à 300 caractères.</small> 
+            <div class="h5 m-t-xs m-b-xs">
+              <span>Contenu<span>
+            </div>
+            <small class="text-muted">
+              Nous vous conseillons de limiter votre réponse à 300 caractères.
+            </small>
             <div class="form-group m-t">
-              <textarea id="faq-editor" name="content" class="form-control input-sm"><%= content %></textarea> 
+              <textarea class="js-editor-input form-control input-sm" name="content">
+                <%= content %>
+              </textarea>
             </div>
           </div>
         </div>
@@ -15,5 +21,5 @@
     <footer class="dk footer text-center">
       <button class="btn btn-sm btn-success button-update">Sauvegarder</button>
       <button class="btn btn-sm btn-danger button-cancel m-l">Annuler</button>
-    </footer> 
+    </footer>
   </div>
