--- a/web/css/backoffice/faq.css
+++ b/web/css/backoffice/faq.css
@@ -7,45 +7,43 @@ body {
     -ms-user-select: none;
         user-select: none;
 }
-
-.faq-content {
+.new-content {
+  margin: 0 0 0 7px!important;
   border: 1px solid #579ad7;
   color: #579ad7 !important;
 }
-.new-content {
-  margin: 0 0 0 7px!important;
-}
 .new-categorie {
   margin: 0 !important;
+}
+.faq-content {
+  border: 1px solid rgba(87, 154, 215, 0.6);
+  color: #579ad7 !important;
+}
+.faq-category {
+  border: 1px solid #dddddd;
 }
 .faq-content.active {
   color: #fff;
   background: #579ad7;
 }
-#faq-list .edit {
-  display: none;
-  float: left;
+.list-group-item{
   position: relative;
-  left: 0;
-  top: -8px;
-  border-width: 0;
-  background: transparent;
-  box-shadow: none;
-  padding: 0 30px 0 0;
-  font-size: 13px;
-  color: #fff;
+  height: 40px;
+  cursor: pointer;
 }
-#faq-list .editing .faq-name {
+.list-group-item.editing .faq-name {
   display: none;
 }
-#faq-list .editing .edit {
-  display: block;
+.list-group-item.editing .edit {
+  display: inline-block;
+  width: auto;
+  max-width: 90%;
+  height: 18px;
 }
 .icon-reorder {
   font-size: 17px;
   vertical-align: middle;
-  float: left;
-  margin-left: -30px;
+  margin-left: -5px;
   cursor: move;
 }
 .faq-content.active .icon-reorder {
@@ -54,38 +52,37 @@ body {
 .faq-category.active .icon-reorder {
   color: #717171;
 }
-.faq-item li {
-  position: relative;
-  cursor: pointer;
-}
 .faq-item .faq-name {
   cursor: text;
   pointer-events: auto;
+  display: inline-block;
+  padding-left: 8px;
 }
-.faq-category .faq-name {
-  color: #717171;
+.list-group-item.faq-category .faq-name { color: #717171; }
+.list-group-item.faq-content.editing .faq-name,
+.list-group-item.faq-content.active .faq-name {
+  color: #fff;
 }
-#faq-list li .destroy {
-  position: absolute;
-  top: 13px;
-  right: 15px;
+.list-group-item .destroy {
+  font-size: 20px;
+  vertical-align: middle;
   z-index: 1;
   cursor: pointer;
 }
 .list-group-item .edit {
   display: none;
-  float: left;
   position: relative;
-  left: 0;
-  top: -8px;
   border-width: 0;
   background: transparent;
   box-shadow: none;
-  padding: 0 30px 0 0;
+  padding: 0 30px 0 8px;
   font-size: 13px;
   color: #717171;
 }
-#faq-list li.done .faq-name {
+.list-group-item.faq-content .edit {
+  color: #fff;
+}
+.list-group-item.done .faq-name {
   text-decoration: line-through;
 }
 #faq-detail textarea {
