Statistics & profile refactoring

--- a/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Config/index.html.twig
@@ -37,7 +37,7 @@
     {% include 'LilyBackOfficeBundle:Config:avi.html.twig' %}
   </script>
 	<script type="text/template" id="chatTpl">
-    {% include 'LilyBackOfficeBundle:Config:chat.html.twig' %}
+    {% include 'LilyBackOfficeBundle:Config:metrics.html.twig' %}
   </script>
 	<script type="text/template" id="modalTpl">
     {% include 'LilyBackOfficeBundle:Config:modal.html.twig' %}
