--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Chat/graph.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Chat/graph.html.twig
@@ -1,7 +1,6 @@
-<header class="panel-heading font-bold">Taux d'utilisation de l'application
+<header class="panel-heading font-bold">Statistiques personnelles du Live Chat
 </header>
 <div class="panel-body">
-  <!-- Graph -->	
   <div class="graph"></div>
   <div class="text-center wrapper">
     <i class="icon-spinner icon-spin icon-large"></i>
