--- a/web/css/backoffice/dashboard.css
+++ b/web/css/backoffice/dashboard.css
@@ -1,47 +1,31 @@
 /*=======================================================================================================
-Dashboard
+DASHBOARD
 =======================================================================================================*/
 
-.loadings, .usage, .redirection, .satisfaction {
-  cursor: pointer;
+.reportrange {
+	margin-top:-6px;
+	margin-right:-5px;
+	border:#efefef solid 1px;
+	background:#f8f8f8;
+	padding:5px;
+	cursor:pointer;
 }
-.loadings.active, .usage.active, .redirection.active, .satisfaction.active {
-  color: #6eaee8;
-}
-ul.top-questions-list {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-.top-questions-item {
-  width: 100%;
-  margin-top: 10px;
-  background: url('../images/top-questions-bg.png') repeat-x bottom !important;
-  border-bottom: 1px solid #f2f6fb;
-}
-.top-questions-number {
-  display: inline-block;
-  border-right: 1px solid #f2f6fb;
-  width: 70px;
-  height: 55px;
-  line-height: 50px;
-  text-align: center;
-  font-weight: bold;
-  color: #6eaee8;
-  font-size: 16px;
-  float: left;
-}
-.top-questions-title {
-  padding-left: 90px;
-  line-height: 55px;
-  margin: 0;
-}
-.top-questions-title span {
-  line-height: 1.2;
-  vertical-align:middle;
-  display:inline-block;
 
+.icon-spinner {
+  position: absolute;
+  top: calc(40% - 50px);
+  left: calc(50% - 50px);
+  font-size: 50px;
 }
-.saved {
-  color: #579ad7;
+
+.panel-body {
+  position: relative;
+}
+
+.panel-footer a {
+	cursor:pointer;
+}
+
+.panel-footer a.active {
+	color:#6eaee8;
 }
