--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Avi/iframe.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/Avi/iframe.html.twig
@@ -1,3 +1,3 @@
 <div class="panel-body lily-iframe">
-  <iframe src="{{ path('lily_api_index', {licence: app.user.client.licence } ) }}#/avi" width="100%" height="540" frameBorder="0"></iframe>
+  <iframe src="{{ path('lily_app_index', {licence: app.user.client.licence } ) }}#/avi" width="100%" height="540" frameBorder="0"></iframe>
 </div>
